--- a/client/src/pages/batman/batman.module.scss
+++ b/client/src/pages/batman/batman.module.scss
@@ -1,7 +1,7 @@
 .page {
     display: flex;
     flex-direction: column;
-    background: url('../images/background.png');
+    background: url('/images/background.png');
     min-height: 100vh;
     z-index: 5;
 }
