--- a/client/src/components/window/window.module.scss
+++ b/client/src/components/window/window.module.scss
@@ -97,6 +97,7 @@
             padding-top: 10px;
             gap: 10px;
             white-space: nowrap;
+            align-items: center;
         }
     }
 }
