--- a/client/src/components/imagepreview/imagepreview.module.scss
+++ b/client/src/components/imagepreview/imagepreview.module.scss
@@ -25,8 +25,8 @@
 }
 
 .previewImage {
-    max-width: 100%;
-    max-height: inherit;
+    max-width: 200px;
+    max-height: 350px;
     margin-bottom: 15px;
     border-radius: 4px;
 }
