--- a/client/src/components/window/window.module.scss
+++ b/client/src/components/window/window.module.scss
@@ -47,7 +47,7 @@
         max-width: 80%;
         max-height: 80%;
         border-radius: 4px;
-        background-color: rgba(255, 255, 255, 0.65);
+        background-color: #ffffff45;
         padding: 10px;
         backdrop-filter: blur(15px);
         border: 1px solid rgba(255, 255, 255, 0.55);
@@ -76,7 +76,7 @@
 
             .title {
                 font-size: 18pt;
-                color: black;
+                color: white;
                 white-space: nowrap;
                 text-overflow: ellipsis;
                 overflow: hidden;
@@ -98,6 +98,7 @@
             gap: 10px;
             white-space: nowrap;
             align-items: center;
+            color: white;
         }
     }
 }
