--- a/client/src/components/window/window.module.scss
+++ b/client/src/components/window/window.module.scss
@@ -80,6 +80,7 @@
                 white-space: nowrap;
                 text-overflow: ellipsis;
                 overflow: hidden;
+                text-shadow: 0 0 3px black;
             }
 
             .close {
