--- a/client/src/components/window/window.module.scss
+++ b/client/src/components/window/window.module.scss
@@ -100,6 +100,7 @@
             white-space: nowrap;
             align-items: center;
             color: white;
+            text-shadow: 0 0 5px black;
         }
     }
 }
