--- a/client/src/components/imagepreview/imagepreview.module.scss
+++ b/client/src/components/imagepreview/imagepreview.module.scss
@@ -11,6 +11,7 @@
     text-align: center;
     cursor: pointer;
     transition: all 0.3s;
+    background-color: rgba(255, 255, 255, 0.35);
 }
 
 .dropZone.dragging {
