--- a/client/src/components/form/form.module.scss
+++ b/client/src/components/form/form.module.scss
@@ -39,6 +39,11 @@
     }
 }
 
+.window {
+    background-color: rgba(255, 255, 255, 0.45);
+    color: black;
+}
+
 .controls {
     display: flex;
     flex-direction: row;
@@ -52,6 +57,7 @@
         text-shadow: 0 0 3px white;
     }
 }
+
 
 .notification {
     height: 50px;
