--- a/client/src/components/window/window.module.scss
+++ b/client/src/components/window/window.module.scss
@@ -33,7 +33,7 @@
     left: 0;
     right: 0;
     backdrop-filter: blur(25px);
-    background-color: rgba(0, 0, 0, .18);
+    background-color: #000000c9;
     display: flex;
     flex-direction: column;
     justify-content: center;
