--- a/client/src/components/button/button.module.scss
+++ b/client/src/components/button/button.module.scss
@@ -15,7 +15,7 @@
     min-width: 100px;
     height: 25px;
 
-    &:hover {
+    &:not(.disabled):hover {
         background-color: rgba(255, 255, 255, 0.45);
         border: 1px solid gray;
     }
@@ -23,5 +23,12 @@
     .icon {
         width: 20px;
         height: 20px;
+    }
+
+    &.disabled {
+        border: 1px solid black;
+        background-color: gray;
+        cursor: pointer;
+        color: #444;
     }
 }
