--- a/client/src/pages/settings/settings.module.scss
+++ b/client/src/pages/settings/settings.module.scss
@@ -4,7 +4,9 @@
     flex-direction: column;
     overflow: hidden;
 
+
     .window {
-        min-width: 450px;
+        min-width: 800px;
+        max-width: 800px;
     }
 }
